# gnome-browser-connector

./: .gitignore  .gitlab-ci.yml  .trivyignore  CMakeLists.txt  NEWS  gnome-browser-connector-host.py.in  gnome-browser-connector.doap  gnome-browser-connector.py.in  meson.build  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
contrib/: merge_json.py
extension/: manifest.json
extension/include/: constants.js  sweettooth-api.js
gnome_browser_connector/: application.py  base.py  connector.py  constants.py  helpers.py  logs.py  main.py  service.py  version.py
